--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,18 @@ wp/
 srdb/
 vendor/
 wp-content/*
+wp-content/plugins/*
+!wp-content/plugins
 !wp-content/mu-plugins
 !wp-content/mu-plugins/*
+wp-content/mu-plugins/component-library
+wp-content/mu-plugins/component-library/*
+wp-content/mu-plugins/must-use-loader
+wp-content/mu-plugins/must-use-loader/*
+wp-content/mu-plugins/must_use_loader.php
 wp-content/mu-plugins/attachmentDownloader.php
 !wp-content/object-cache.php
+!wp-content/plugins/vizzit-analytics
 
 !wp-content⁩/languages⁩/⁨woocommerce⁩
 !wp-content⁩/languages⁩/⁨woocommerce⁩/*
