--- a/composer.json
+++ b/composer.json
@@ -85,7 +85,8 @@
         "helsingborg-stad/media-usage": "^1.3",
         "wpackagist-plugin/wp-piwik": "^1.0",
         "wpackagist-plugin/nginx-helper": "^2.2",
-        "helsingborg-stad/component-library": "dev-master"
+        "helsingborg-stad/component-library": "dev-master",
+        "mcguffin/acf-customizer": "0.2.13"
     },
     "extra": {
         "path": "/",
