--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -56,10 +56,17 @@ jobs:
     - name: Cleanup .npmrc
       run: rm ~/.npmrc
 
+    - name: Get ACF
+      run: |
+        wget ${{ secrets.ACF_URL }} -O acf.zip
+        unzip acf.zip -d wp-content/plugins/
+        rm acf.zip
+
+
     - name: rsync deployment to www-data user.
       uses: burnett01/rsync-deployments@4.1
       with:
-        switches: -avzrog --delete --backup --backup-dir=${{ secrets.DEPLOY_REMOTE_BACKUP_DIR_KAMPANJ_HELSINGBORG_SE }}/$GITHUB_SHA --chown=www-data:www-data --exclude config --exclude wp-content/uploads --exclude wp-content/plugins/advanced-custom-fields-pro --exclude wp-content/plugins/gravityforms --exclude wp-content/plugins/wp-schema-pro --exclude track-assets --exclude wp-content/plugins/volontar-wordpress --exclude wp-content/languages
+        switches: -avzrog --delete --backup --backup-dir=${{ secrets.DEPLOY_REMOTE_BACKUP_DIR_KAMPANJ_HELSINGBORG_SE }}/$GITHUB_SHA --chown=www-data:www-data --exclude config --exclude wp-content/uploads --exclude wp-content/plugins/gravityforms --exclude wp-content/plugins/wp-schema-pro --exclude track-assets --exclude wp-content/plugins/volontar-wordpress --exclude wp-content/languages
         path: .
         remote_path: ${{ secrets.DEPLOY_REMOTE_PATH_KAMPANJ_HELSINGBORG_SE }}
         remote_host: ${{ secrets.DEPLOY_REMOTE_HOST_KAMPANJ_HELSINGBORG_SE }}
