--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -50,18 +50,17 @@ jobs:
         echo "registry=https://npm.pkg.github.com/helsingborg-stad" >> ~/.npmrc
         echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/.npmrc
 
+    - name: Get ACF
+      run: |
+        wget "${{ secrets.ACF_URL }}" -O acf.zip
+        unzip acf.zip -d wp-content/plugins/
+        rm acf.zip
+
     - name: Execute buildscripts in themes and plugins folders
       run: php ./build.php --cleanup
 
     - name: Cleanup .npmrc
       run: rm ~/.npmrc
-
-    - name: Get ACF
-      run: |
-        wget ${{ secrets.ACF_URL }} -O acf.zip
-        unzip acf.zip -d wp-content/plugins/
-        rm acf.zip
-
 
     - name: rsync deployment to www-data user.
       uses: burnett01/rsync-deployments@4.1
