--- a/composer.json
+++ b/composer.json
@@ -46,14 +46,13 @@
         "helsingborg-stad/active-directory-api-wp-integration": ">=1.0.0",
         "helsingborg-stad/multisite-role-propagation": ">=1.0.0",
         "helsingborg-stad/modularity-form-builder": "dev-3.0/develop",
-        "helsingborg-stad/modularity-sections": "1.3.3",
+        "helsingborg-stad/modularity-sections": "dev-3.0/develop",
         "helsingborg-stad/wp-page-for-post-type": ">=1.0.7",
         "helsingborg-stad/modularity-checklist": ">=1.0.0",
         "helsingborg-stad/idea-manager": ">=1.1.1",
         "helsingborg-stad/attachment-revisions": "^1.2",
         "wpackagist-plugin/tablepress": ">=1.9",
         "wpackagist-plugin/wp-editor-widget": "0.5.5",
-        "wpackagist-plugin/varnish-http-purge": ">=4.3.1",
         "wpackagist-plugin/wp-nested-pages": "1.6.5.2",
         "wpackagist-plugin/rest-api": "2.0-beta15",
         "wpackagist-plugin/mce-table-buttons": "^3.0.0",
