--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
             "email": "webbredaktionen@helsingborg.se"
         }
     ],
+    "config": {
+        "platform": {
+            "php": "7.1.33"
+        }
+    },
     "prefer-stable": true,
     "minimum-stability" : "dev",
     "repositories": [
