Update older plugins

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "helsingborg-stad/lix-calculator": ">=1.0.0",
         "helsingborg-stad/content-scheduler": ">=1.0.0",
         "helsingborg-stad/modularity-dictionary": ">=1.0.0",
-        "helsingborg-stad/modularity-guides": ">=0.1.0",
+        "helsingborg-stad/modularity-guides": "dev-3.0/develop",
         "helsingborg-stad/force-ssl": ">=1.0.0",
         "helsingborg-stad/readspeaker-helper": ">=1.0.0",
         "helsingborg-stad/broken-link-detector": ">=1.0.0",
@@ -40,7 +40,7 @@
         "helsingborg-stad/better-post-ui": ">=1.0.0",
         "helsingborg-stad/custom-short-links": ">=1.0.0",
         "helsingborg-stad/wp-listings": ">=1.0.0",
-        "helsingborg-stad/api-event-manager-integration": ">=0.1.0",
+        "helsingborg-stad/api-event-manager-integration": "dev-3.0/develop",
         "helsingborg-stad/modularity-timeline": ">=1.1.4",
         "helsingborg-stad/wp-content-translator": ">=1.0.0",
         "helsingborg-stad/active-directory-api-wp-integration": ">=1.0.0",
