Add sentry integrate plugin

--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,8 @@ wp-content/mu-plugins/attachmentDownloader.php
 !wp-content/object-cache.php
 !wp-content/plugins/vizzit-analytics
 
-!wp-content⁩/languages⁩/⁨woocommerce⁩
-!wp-content⁩/languages⁩/⁨woocommerce⁩/*
+!wp-content/languages/woocommerce
+!wp-content/languages/woocommerce/*
 
 
 # Themes dependencies #
