--- a/composer.json
+++ b/composer.json
@@ -86,7 +86,8 @@
         "wpackagist-plugin/nginx-helper": "^2.2",
         "helsingborg-stad/component-library": "dev-master",
         "bueltge/must-use-loader": "^1.3",
-        "helsingborg-stad/modularity-contact-banner": "dev-3.0/develop"
+        "helsingborg-stad/modularity-contact-banner": "dev-3.0/develop",
+        "wpackagist-plugin/wp-sentry-integration": "^4.10"
     },
     "extra": {
         "path": "/",
