--- a/composer.json
+++ b/composer.json
@@ -87,7 +87,8 @@
         "helsingborg-stad/component-library": "dev-master",
         "bueltge/must-use-loader": "^1.3",
         "helsingborg-stad/modularity-contact-banner": "dev-3.0/develop",
-        "wpackagist-plugin/wp-sentry-integration": "^4.10"
+        "wpackagist-plugin/wp-sentry-integration": "^4.10",
+        "helsingborg-stad/trenomvarldsanalys-wp": "dev-main"
     },
     "extra": {
         "path": "/",
