--- a/composer.json
+++ b/composer.json
@@ -88,7 +88,8 @@
         "bueltge/must-use-loader": "^1.3",
         "helsingborg-stad/modularity-contact-banner": "dev-3.0/develop",
         "wpackagist-plugin/wp-sentry-integration": "^4.10",
-        "helsingborg-stad/modularity-entryscape": "dev-master"
+        "helsingborg-stad/modularity-entryscape": "dev-master",
+        "helsingborg-stad/trenomvarldsanalys-wp": "dev-main"
     },
     "extra": {
         "path": "/",
