--- a/composer.json
+++ b/composer.json
@@ -90,7 +90,8 @@
         "wpackagist-plugin/wp-sentry-integration": "^4.10",
         "helsingborg-stad/modularity-entryscape": "dev-master",
         "helsingborg-stad/hbg-trend-omvarlds-analys-2021": "dev-main",
-        "mcguffin/acf-customizer": "^0.3.0"
+        "mcguffin/acf-customizer": "^0.3.0",
+        "wpackagist-plugin/redis-cache": "2.0.18"
     },
     "extra": {
         "path": "/",
