--- a/composer.json
+++ b/composer.json
@@ -88,7 +88,8 @@
         "wpackagist-plugin/acf-to-rest-api": "^3.2",
         "wpackagist-plugin/wp-webhooks": "^2.0",
         "helsingborg-stad/skyfish-integration": "^0.9.1",
-        "helsingborg-stad/media-usage": "^1.3"
+        "helsingborg-stad/media-usage": "^1.3",
+        "helsingborg-stad/api-project-manager-dashboard": "dev-feature/webpack-react"
     },
     "extra": {
         "wordpress-install-dir": "wp",
