--- a/composer.json
+++ b/composer.json
@@ -88,7 +88,8 @@
         "helsingborg-stad/skyfish-integration": "^0.9.1",
         "helsingborg-stad/media-usage": "^1.3",
         "wpackagist-plugin/wp-piwik": "^1.0",
-        "wpackagist-plugin/nginx-helper": "^2.2"
+        "wpackagist-plugin/nginx-helper": "^2.2",
+        "helsingborg-stad/api-project-manager-dashboard": "dev-feature/webpack-react"
     },
     "extra": {
         "wordpress-install-dir": "wp",
