--- a/composer.json
+++ b/composer.json
@@ -89,7 +89,7 @@
         "helsingborg-stad/media-usage": "^1.3",
         "wpackagist-plugin/wp-piwik": "^1.0",
         "wpackagist-plugin/nginx-helper": "^2.2",
-        "helsingborg-stad/api-project-manager-dashboard": "dev-feature/webpack-react"
+        "helsingborg-stad/api-project-manager-dashboard": "^1.0"
     },
     "extra": {
         "wordpress-install-dir": "wp",
