--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "helsingborg-stad/better-post-ui": ">=1.0.0",
         "helsingborg-stad/custom-short-links": ">=1.0.0",
         "helsingborg-stad/wp-listings": ">=1.0.0",
-        "helsingborg-stad/api-event-manager-integration": "dev-3.0/develop",
+        "helsingborg-stad/api-event-manager-integration": "dev-feature/refactor-event-form",
         "helsingborg-stad/modularity-timeline": ">=1.1.4",
         "helsingborg-stad/wp-content-translator": ">=1.0.0",
         "helsingborg-stad/active-directory-api-wp-integration": ">=1.0.0",
@@ -83,7 +83,7 @@
         "helsingborg-stad/media-usage": "^1.3",
         "wpackagist-plugin/wp-piwik": "^1.0",
         "wpackagist-plugin/nginx-helper": "^2.2",
-        "helsingborg-stad/component-library": "dev-master",
+        "helsingborg-stad/component-library": "dev-feature/refactor-form",
         "bueltge/must-use-loader": "^1.3",
         "helsingborg-stad/modularity-contact-banner": "dev-3.0/develop",
         "wpackagist-plugin/wp-sentry-integration": "^4.10",
