Add recaptcha integration package

--- a/composer.json
+++ b/composer.json
@@ -90,7 +90,8 @@
         "helsingborg-stad/modularity-entryscape": "dev-master",
         "helsingborg-stad/hbg-trend-omvarlds-analys-2021": "dev-main",
         "mcguffin/acf-customizer": "^0.3.0",
-        "wpackagist-plugin/redis-cache": "2.0.18"
+        "wpackagist-plugin/redis-cache": "2.0.18",
+        "helsingborg-stad/recaptcha-integration": "^1.1"
     },
     "extra": {
         "path": "/",
