--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -2,24 +2,31 @@ name: Build and deploy 3.0/master.
 
 on:
   push:
-    branches: [ 3.0/master ]
+    branches: [ 3.0/paid-plugin ]
     paths-ignore:
       - .github/**
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  # build:
+  #   runs-on: ubuntu-latest
 
+  #   steps:
+  #   - uses: actions/checkout@v2
+
+  #   - uses: helsingborg-stad/municipio-deploy/3.0@master
+  #     with:
+  #       deploy-host: ${{ secrets.DEPLOY_REMOTE_HOST_KAMPANJ_HELSINGBORG_SE }}
+  #       deploy-host-path: ${{ secrets.DEPLOY_REMOTE_PATH_KAMPANJ_HELSINGBORG_SE }}
+  #       deploy-host-backup-path: ${{ secrets.DEPLOY_REMOTE_BACKUP_DIR_KAMPANJ_HELSINGBORG_SE }}
+  #       deploy-host-user: ${{ secrets.DEPLOY_REMOTE_USER }}
+  #       deploy-host-user-key: ${{ secrets.DEPLOY_KEY }}
+  #       deploy-host-web-server-user: ${{ secrets.WEB_SERVER_USER }}
+  #       github-token: ${{ secrets.GITHUB_TOKEN }}
+  #       acf-url: ${{ secrets.ACF_URL }}
+
+  paid-plugin:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-
-    - uses: helsingborg-stad/municipio-deploy/3.0@master
-      with:
-        deploy-host: ${{ secrets.DEPLOY_REMOTE_HOST_KAMPANJ_HELSINGBORG_SE }}
-        deploy-host-path: ${{ secrets.DEPLOY_REMOTE_PATH_KAMPANJ_HELSINGBORG_SE }}
-        deploy-host-backup-path: ${{ secrets.DEPLOY_REMOTE_BACKUP_DIR_KAMPANJ_HELSINGBORG_SE }}
-        deploy-host-user: ${{ secrets.DEPLOY_REMOTE_USER }}
-        deploy-host-user-key: ${{ secrets.DEPLOY_KEY }}
-        deploy-host-web-server-user: ${{ secrets.WEB_SERVER_USER }}
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        acf-url: ${{ secrets.ACF_URL }}
+      with: 
+        repository: ${{ secrets.PAID_PLUGINS_REPO }}
