ci: add token with more caps

--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -28,3 +28,4 @@ jobs:
     - uses: actions/checkout@v2
       with: 
         repository: ${{ secrets.PAID_PLUGINS_REPO }}
+        token: ${{ secrets.DEPLOY_ACCESS_TOKEN }}
