--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -28,4 +28,4 @@ jobs:
     - uses: actions/checkout@v2
       with: 
         repository: ${{ secrets.PAID_PLUGINS_REPO }}
-        token: ${{ secrets.DEPLOY_ACCESS_TOKEN }}
+        token: ${{ secrets.HBG_GH_TOKEN }}
