--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -29,3 +29,18 @@ jobs:
       with: 
         repository: ${{ secrets.PAID_PLUGINS_REPO }}
         token: ${{ secrets.HBG_GH_TOKEN }}
+
+    - name: unzip and remove
+      run: unzip * && rm *.zip && ls
+      shell: bash
+
+    # - name: The rsync deployment to www-data user.
+    #   uses: burnett01/rsync-deployments@4.1
+    #   with:
+    #     switches: -avzrog --delete --backup --backup-dir=${{ inputs.deploy-host-backup-path }}/$GITHUB_SHA --chown=${{ inputs.deploy-host-web-server-user }}:${{ inputs.deploy-host-web-server-user }} --exclude config --exclude config-example --exclude wp-content/uploads --exclude wp-content/plugins/gravityforms --exclude wp-content/plugins/wp-schema-pro --exclude track-assets --exclude wp-content/plugins/volontar-wordpress --exclude wp-content/languages --exclude .htaccess --exclude wp-content/plugins/local_*
+    #     path: .
+    #     remote_path: ${{ inputs.deploy-host-path }}
+    #     remote_host: ${{ inputs.deploy-host }}
+    #     remote_user: ${{ inputs.deploy-host-user }}
+    #     remote_key: ${{ inputs.deploy-host-user-key }}
+    #     remote_port: ${{ inputs.deploy-host-port }}
