reset branch after test

--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -2,7 +2,9 @@ name: Build and deploy 3.0/master.
 
 on:
   push:
-    branches: [ 3.0/paid-plugin ]
+    branches: [ 3.0/master ]
+    paths-ignore:
+      - .github/**
 
 jobs:
   build:
@@ -11,16 +13,16 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    # - uses: helsingborg-stad/municipio-deploy/3.0@master
-    #   with:
-    #     deploy-host: ${{ secrets.DEPLOY_REMOTE_HOST_KAMPANJ_HELSINGBORG_SE }}
-    #     deploy-host-path: ${{ secrets.DEPLOY_REMOTE_PATH_KAMPANJ_HELSINGBORG_SE }}
-    #     deploy-host-backup-path: ${{ secrets.DEPLOY_REMOTE_BACKUP_DIR_KAMPANJ_HELSINGBORG_SE }}
-    #     deploy-host-user: ${{ secrets.DEPLOY_REMOTE_USER }}
-    #     deploy-host-user-key: ${{ secrets.DEPLOY_KEY }}
-    #     deploy-host-web-server-user: ${{ secrets.WEB_SERVER_USER }}
-    #     github-token: ${{ secrets.GITHUB_TOKEN }}
-    #     acf-url: ${{ secrets.ACF_URL }}
+    - uses: helsingborg-stad/municipio-deploy/3.0@master
+      with:
+        deploy-host: ${{ secrets.DEPLOY_REMOTE_HOST_KAMPANJ_HELSINGBORG_SE }}
+        deploy-host-path: ${{ secrets.DEPLOY_REMOTE_PATH_KAMPANJ_HELSINGBORG_SE }}
+        deploy-host-backup-path: ${{ secrets.DEPLOY_REMOTE_BACKUP_DIR_KAMPANJ_HELSINGBORG_SE }}
+        deploy-host-user: ${{ secrets.DEPLOY_REMOTE_USER }}
+        deploy-host-user-key: ${{ secrets.DEPLOY_KEY }}
+        deploy-host-web-server-user: ${{ secrets.WEB_SERVER_USER }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        acf-url: ${{ secrets.ACF_URL }}
 
   paid-plugin: # Extra 
     runs-on: ubuntu-latest
