ci: dont run paid plugin concurrent to build

--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -25,6 +25,7 @@ jobs:
         acf-url: ${{ secrets.ACF_URL }}
 
   paid-plugin: # Extra 
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
