--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     ],
     "require": {
         "composer/installers": "~1.0",
-        "johnpbloch/wordpress": "6.0.3",
+        "johnpbloch/wordpress": "~6.1",
         "helsingborg-stad/modularity": "dev-3.0/develop",
         "helsingborg-stad/municipio": "dev-3.0/develop",
         "helsingborg-stad/familjenhelsingborg": "1.0.2",
