--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,10 @@
     "config": {
         "platform": {
             "php": "7.1.33"
+        },
+        "allow-plugins": {
+            "composer/installers": true,
+            "johnpbloch/wordpress-core-installer": true
         }
     },
     "minimum-stability": "stable",
@@ -77,7 +81,7 @@
         "wpackagist-plugin/wp-rest-filter": "^1.4",
         "wpackagist-plugin/safe-svg": "^1.9",
         "helsingborg-stad/modularity-comments": "^1.0",
-        "helsingborg-stad/api-project-manager-integration": "1.9.2",
+        "helsingborg-stad/api-project-manager-integration": "dev-3.0/develop",
         "helsingborg-stad/algolia-index-modularity-addon": "^1.0",
         "helsingborg-stad/algolia-index": "^1.0",
         "helsingborg-stad/municipio-innovation-theme": "1.5.1",
