--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -24,26 +24,16 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         acf-url: ${{ secrets.ACF_URL }}
 
-  paid-plugin: # Extra 
+  zipped-plugins:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-      with: 
-        repository: ${{ secrets.PAID_PLUGINS_REPO }}
-        token: ${{ secrets.HBG_GH_TOKEN }}
-
-    - name: unzip and remove
-      run: unzip \*.zip && rm *.zip
-      shell: bash
-
-    - name: The rsync deployment to www-data user.
-      uses: burnett01/rsync-deployments@4.1
+    - uses: helsingborg-stad/wordpress-plugin-unzipper@main
       with:
-        switches: -avzrog --chown=${{ secrets.WEB_SERVER_USER }}:${{ secrets.WEB_SERVER_USER }}
-        path: .
-        remote_path: ${{ secrets.DEPLOY_REMOTE_PATH_KAMPANJ_HELSINGBORG_SE }}/wp-content/plugins
-        remote_host: ${{ secrets.DEPLOY_REMOTE_HOST_KAMPANJ_HELSINGBORG_SE }}
-        remote_user: ${{ secrets.DEPLOY_REMOTE_USER }}
-        remote_key: ${{ secrets.DEPLOY_KEY }}
-        remote_port: 22
+        deploy-host: ${{ secrets.DEPLOY_REMOTE_HOST_KAMPANJ_HELSINGBORG_SE }}
+        deploy-host-path: ${{ secrets.DEPLOY_REMOTE_PATH_KAMPANJ_HELSINGBORG_SE }}
+        deploy-host-user: ${{ secrets.DEPLOY_REMOTE_USER }}
+        deploy-host-user-key: ${{ secrets.DEPLOY_KEY }}
+        deploy-host-web-server-user: "www-data"
+        github-token: ${{ secrets.HBG_GH_TOKEN }}
+        plugin-repo: ${{ secrets.PAID_PLUGINS_REPO }}
