--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -34,6 +34,6 @@ jobs:
         deploy-host-path: ${{ secrets.DEPLOY_REMOTE_PATH_KAMPANJ_HELSINGBORG_SE }}
         deploy-host-user: ${{ secrets.DEPLOY_REMOTE_USER }}
         deploy-host-user-key: ${{ secrets.DEPLOY_KEY }}
-        deploy-host-web-server-user: "www-data"
+        deploy-host-web-server-user: ${{ secrets.WEB_SERVER_USER }}
         github-token: ${{ secrets.HBG_GH_TOKEN }}
         plugin-repo: ${{ secrets.PAID_PLUGINS_REPO }}
