--- a/composer.json
+++ b/composer.json
@@ -99,7 +99,8 @@
 		"helsingborg-stad/mce-table-buttons": "~3.3.1",
         "wpackagist-plugin/translatepress-multilingual": "^2.3.9",
         "municipio/content-insights-for-editors": "dev-master",
-        "helsingborg-stad/modularity-local-events": "^1.0"
+        "helsingborg-stad/modularity-local-events": "^1.0",
+        "helsingborg-stad/wp-page-for-term": "^1.0"
     },
     "extra": {
         "path": "/",
